# ai-amazon-scraper

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260422_1210_0001_initial.py  20260422_1215_0002_add_embedding.py
src/new_amazon_scraper/: agent.py  api.py  config.py  db.py  fetcher.py  parser.py  product.py  repo.py  scraper.py  search.py  ui.py  ui_client.py
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_fetcher.py  test_parser.py  test_product.py  test_repo.py  test_scraper.py  test_search.py  test_ui_client.py
tests/fixtures/: sample_product.html
tests/integration/: conftest.py  test_pgvector_search.py  test_postgres_repo.py
